<resources>
    <string name="app_name">EAP AKA</string>
    <string name="facebook_app_id">519123011821610</string>
    <string name="skip_for_now">Skip For Now</string>
    <string name="share">Share this Ride</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="refer_to_a_friend">Share</string>
    <string name="settings">Settings</string>
    <string name="userName">Username</string>
    <string name="author_email">Email ID</string>
    <string name="profile">Menu</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="email">Email ID</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="hint_password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">REGISTER</string>
    <string name="facebook_provider_id">facebook_provider_id</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="hello">Hello All Rides Are Here</string>
    <string name="category">Category:</string>
    <string name="Select">Select:</string>
    <string name="home">Home</string>
    <string name="selectDate">Select Date:</string>
    <string name="selectTime">Select Time:</string>
    <string name="submit">   Submit   </string>
    <string name="maxDistance">Distance : </string>
    <string name="miles">miles</string>
    <string name="title_location_permission">Grant this app permission to get your location</string>
    <string name="text_location_permission">For better user experience grant this permission to the app</string>
    <string name="ok">OK</string>
    <string name="hint">find where this is</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="avgTime">Avg duration:</string>
    <string name="comments">Comments</string>
    <string name="say_something">Say Something</string>
    <string name="post">Post</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="postComment">Send</string>
    <string name="bid">Bid</string>
    <string name="initial_price">$ 0.0</string>
    <string name="bid_author_title">User</string>
    <string name="bid_amount_title">$$</string>
    <string name="bid_time_title">Time</string>
    <string name="uber_and_lyft_prices">Uber and Lyft prices</string>
    <string name="top_3_bids">Top Five Bids</string>
    <string name="top_rides">Top Bids</string>
    <string name="try_again">Try Again</string>
    <string name="cash_only">I understand payment is cash only</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="count">1</string>
    <string name="max_person_error">We currently support max. 4 riders </string>

</resources>