<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/comments_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/comments"
        android:textColor="#000000"
        android:gravity="center"/>

    <FrameLayout
        android:id="@+id/comments_fragment"
        android:layout_below="@id/comments_tv"
        android:layout_above="@id/comment_form"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <LinearLayout
        android:id="@+id/comment_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:weightSum="1.0">

        <EditText
            android:id="@+id/ride_field_comment_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="@string/write_a_comment"
            android:maxLines="3" />

        <Button
            android:id="@+id/ride_post_comment"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/post" />

    </LinearLayout>

</RelativeLayout>