<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:lyft="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:uber="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appbar"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:id="@+id/rl_ride_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/comment_share_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/comment_title_tv"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="3dp"
                        android:layout_weight="0.5"
                        android:text="@string/comments"
                        android:textAlignment="center"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/share_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="3dp"
                        android:layout_marginStart="2dp"
                        android:layout_weight="0.5"
                        android:text="@string/share"
                        android:textAlignment="center"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

                <com.uber.sdk.android.rides.RideRequestButton
                    android:id="@+id/uber_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/comment_share_ll"
                    uber:ub__style="black" />

                <com.lyft.lyftbutton.LyftButton
                    android:id="@+id/lyft_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/uber_button"
                    lyft:lyftStyle="lyftLauncher" />

                <RelativeLayout
                    android:id="@+id/origin_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/lyft_button"
                    android:paddingBottom="5dp"
                    android:paddingTop="2dp">

                    <bidyourride.kurama.com.eapaka.view.CircleImageView
                        android:id="@+id/origin_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_my_location_black_48dp" />

                    <TextView
                        android:id="@+id/origin_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/origin_image"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/origin_image"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingTop="5dp"
                        android:textSize="15sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/destination_ll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/origin_ll"
                    android:paddingBottom="10dp"
                    android:paddingTop="5dp">

                    <bidyourride.kurama.com.eapaka.view.CircleImageView
                        android:id="@+id/destination_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_location_on_black_48dp" />

                    <TextView
                        android:id="@+id/destination_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/destination_image"
                        android:layout_alignParentEnd="true"
                        android:layout_toEndOf="@+id/destination_image"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:paddingTop="5dp"
                        android:textSize="15sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/ll_date_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/destination_ll"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/date_ll"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp">

                        <bidyourride.kurama.com.eapaka.view.CircleImageView
                            android:id="@+id/date_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_date_range_black_48dp" />

                        <TextView
                            android:id="@+id/date_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignBottom="@+id/date_image"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="center"
                            android:layout_toEndOf="@+id/date_image"
                            android:paddingLeft="2dp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/time_ll"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp">

                        <bidyourride.kurama.com.eapaka.view.CircleImageView
                            android:id="@+id/time_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_access_time_black_48dp" />

                        <TextView
                            android:id="@+id/time_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignBottom="@+id/time_image"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="center"
                            android:layout_toEndOf="@+id/time_image"
                            android:paddingLeft="2dp" />

                    </RelativeLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_distance_and_travel_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ll_date_time"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/distance_ll"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp">

                        <bidyourride.kurama.com.eapaka.view.CircleImageView
                            android:id="@+id/distance_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_label_black_48dp" />

                        <TextView
                            android:id="@+id/distace_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignBottom="@+id/distance_image"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="center"
                            android:layout_toEndOf="@+id/distance_image"
                            android:paddingLeft="2dp" />

                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/duration_ll"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:paddingBottom="10dp"
                        android:paddingTop="5dp">

                        <bidyourride.kurama.com.eapaka.view.CircleImageView
                            android:id="@+id/duration_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_timeline_black_48dp" />

                        <TextView
                            android:id="@+id/duration_tv"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_alignBottom="@+id/duration_image"
                            android:layout_alignParentEnd="true"
                            android:layout_gravity="center"
                            android:layout_toEndOf="@+id/duration_image"
                            android:paddingLeft="2dp" />

                    </RelativeLayout>

                </LinearLayout>


                <RelativeLayout
                    android:id="@+id/bid_ll"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_distance_and_travel_time"
                    android:gravity="center_horizontal">

                    <LinearLayout
                        android:id="@+id/edit_value_ll"
                        android:layout_width="match_parent"
                        android:layout_height="30dp">

                        <View
                            android:id="@+id/bid_edit_empty1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_weight="0.25" />

                        <ImageView
                            android:id="@+id/dec_button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.1"
                            android:background="@color/person_count_button"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_remove_black_48dp" />

                        <TextView
                            android:id="@+id/price_tv"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_weight="0.3"
                            android:gravity="center"
                            android:text="@string/initial_price"
                            android:textColor="#000000" />

                        <ImageView
                            android:id="@+id/inc_button"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:layout_weight="0.1"
                            android:background="@color/person_count_button"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_add_black_48dp" />

                        <View
                            android:id="@+id/bid_edit_empty2"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_weight="0.25" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/bid_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/edit_value_ll"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/custom_button"
                        android:elevation="@dimen/button_corner_radius"
                        android:gravity="center"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/bid" />

                </RelativeLayout>


                <TextView
                    android:id="@+id/tv_update_bid_details"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@id/bid_ll"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:maxLines="2"
                    android:textAllCaps="true"
                    android:textColor="@color/orange"
                    android:textSize="15sp" />

                <Button
                    android:id="@+id/try_again_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/tv_update_bid_details"
                    android:layout_marginEnd="20dp"
                    android:gravity="end"
                    android:text="@string/try_again" />

                <TextView
                    android:id="@+id/top_rides_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/try_again_button"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/top_rides"
                    android:textAllCaps="true"
                    android:textColor="@color/dark_grey" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recylcer_bid_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/top_rides_text_view"
                    tools:listitem="@layout/item_bid_value" />
            </RelativeLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/post_author_layout"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingtoolbarly"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|snap">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.gms.maps.MapView
                        android:id="@+id/activity_map"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_alignParentStart="true"
                        android:src="@drawable/ic_home_black_48dp"
                        app:liteMode="true"></com.google.android.gms.maps.MapView>
                </RelativeLayout>

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:clipToPadding="false"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/activity_main_drawer" />
</android.support.v4.widget.DrawerLayout>